# openapi.yaml
@@ -1,166 +1,139 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
+  title: Users service
   version: 1.0.0
-  title: Clients service
 servers:
-  - url: https://localhost:{port}
-    description: Development server
+  - url: http://localhost:{port}
+    description: The production API server
     variables:
       port:
         enum:
           - '8085'
           - '443'
         default: '8085'
+tags:
+  - name: Users
+    description: Everything about users
 paths:
-  /users/{userId}:
-    get:
-      description: Get user by id
-      operationId: getUserById
-      x-router-controller: userController
-      parameters:
-        - name: userId
-          in: path
-          description: User id
-          required: true
-          schema:
-            type: integer
-            format: int32
-      responses:
-        '200':
-          description: User
-          content:
-            application/json:
-              schema:
-                type: Object
-                $ref: '#/components/schemas/User'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                type: Object
-                $ref: '#/components/responses/NotFound'
-    put:
-      description: Update user
-      operationId: updateUser
-      x-router-controller: userController
-      parameters:
-        - name: userId
-          in: path
-          description: User id
-          required: true
-          schema:
-            type: integer
-            format: int32
-      requestBody:
-        description: User data
-        required: true
-        x-name: userData
-        content:
-          application/json:
-            schema:
-              properties:
-                name:
-                  type: string
-      responses:
-        '200':
-          description: User updated
-          content:
-            application/json:
-              schema:
-                type: Object
-                $ref: '#/components/schemas/User'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                type: Object
-                $ref: '#/components/responses/NotFound'
-    delete:
-      description: Delete user
-      operationId: deleteUserById
-      x-router-controller: userController
-      parameters:
-        - name: userId
-          in: path
-          description: User id
-          required: true
-          schema:
-            type: integer
-            format: int32
-      responses:
-        '200':
-          description: User updated
-          content:
-            application/json:
-              schema:
-                type: bolean
-                required: true
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                type: Object
-                $ref: '#/components/responses/NotFound'
   /users:
-    post:
-      description: Create user
-      operationId: createUser
-      x-router-controller: userController
-      requestBody:
-        description: User data
-        required: true
-        x-name: userData
-        content:
-          application/json:
-            schema:
-              properties:
-                name:
-                  type: string
+    get:
+      tags:
+        - Users
+      summary: Поиск пользователей
+      operationId: searchUsers
+      parameters:
+        - name: id
+          in: query
+          schema:
+            type: integer
       responses:
-        '201':
-          description: User created
+        '200':
+          description: Success
           content:
             application/json:
               schema:
-                type: Object
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+      x-swagger-router-controller: usersController
+    post:
+      tags:
+        - Users
+      summary: Создание пользователя
+      operationId: createUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        201:
+          description: Success
+          content:
+            application/json:
+              schema:
                 $ref: '#/components/schemas/User'
+        405:
+          description: Invalid input
+      x-swagger-router-controller: usersController
+  /users/{userId}:
+    parameters:
+      - name: userId
+        in: path
+        required: true
+        description: Id of user
+        schema:
+          type: integer
+    get:
+      tags:
+        - Users
+      summary: Получение пользователя по идентификатору
+      operationId: getUser
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+      x-swagger-router-controller: usersController
+    post:
+      tags:
+        - Users
+      summary: Обновление пользователя
+      operationId: updateUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserData'
+      responses:
+        200:
+          description: Success
+      x-swagger-router-controller: usersController
+    delete:
+      tags:
+        - Users
+      summary: Удаление пользователя по идентификатору
+      operationId: deleteUser
+      responses:
+        200:
+          description: Success
+      x-swagger-router-controller: usersController
 components:
   schemas:
     User:
+      type: object
       properties:
         id:
           type: integer
           format: int32
-        name:
+        accountId:
+          type: integer
+          format: int32
+        lastName:
           type: string
-      required:
-        - id
-        - name
-    GeneralError:
+        firstName:
+          type: string
+        middleName:
+          type: string
+    UserData:
       type: object
       properties:
-        message:
+        lastName:
           type: string
-        code:
-          type: integer
-      required:
-        - code
-        - message
+        firstName:
+          type: string
+        middleName:
+          type: string
+        login:
+          type: string
+        password:
+          type: string
   responses:
-    NotFound:
-      description: Entity not found.
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/GeneralError'
-    IllegalInput:
-      description: Illegal input for operation.
-    GeneralError:
-      description: General Error
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/GeneralError'
+    200:
+      description: Success
+    201:
+      description: Created
+    404:
+      description: Not found
